layered-contracts/src/tests/snapshots/layered_contracts__tests__defined_term__empty_quotes.snap
---
source: layered-contracts/src/tests/defined_term.rs
expression: "test_defined_terms(r#\"\"\" means nothing\"#)"
---
"  "     means     nothing
         ╰───╯Means
