layered-contracts/src/tests/snapshots/layered_contracts__tests__defined_term__hereinafter_referred_to_as.snap
---
source: layered-contracts/src/tests/defined_term.rs
expression: "test_defined_terms(r#\"ABC Corp, hereinafter referred to as the \"Company\"\"#)"
---
ABC     Corp  ,     hereinafter     referred     to     as     the     "  Company  "
                    ╰─────────╯Hereinafter
                    ╰──────────────────────────────────────────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Hereinafter }, conf: 0.90)
