layered-contracts/src/tests/snapshots/layered_contracts__tests__defined_term__no_quoted_term.snap
---
source: layered-contracts/src/tests/defined_term.rs
expression: "test_defined_terms(\"ABC Corporation means the company\")"
---
ABC     Corporation     means     the     company
                        ╰───╯Means
