layered-contracts/src/tests/snapshots/layered_contracts__tests__defined_term__parenthetical_multiword.snap
---
source: layered-contracts/src/tests/defined_term.rs
expression: "test_defined_terms(r#\"Acme Inc. (the \"Purchasing Party\")\"#)"
---
Acme     Inc  .     (  the     "  Purchasing     Party  "  )
                                                 ╰───╯Party
                    ╰──────────────────────────────────────╯Scored(DefinedTerm { term_name: "Purchasing Party", definition_type: Parenthetical }, conf: 0.90)
