layered-contracts/src/tests/snapshots/layered_contracts__tests__defined_term__parenthetical_without_the.snap
---
source: layered-contracts/src/tests/defined_term.rs
expression: "test_defined_terms(r#\"John Smith (\"Contractor\")\"#)"
---
John     Smith     (  "  Contractor  "  )
                   ╰────────────────────╯Scored(DefinedTerm { term_name: "Contractor", definition_type: Parenthetical }, conf: 0.90)
