layered-contracts/src/tests/snapshots/layered_contracts__tests__defined_term__quoted_means_multiword.snap
---
source: layered-contracts/src/tests/defined_term.rs
expression: "test_defined_terms(r#\"\"Effective Date\" means the date of this Agreement\"#)"
---
"  Effective     Date  "     means     the     date     of     this     Agreement
                             ╰───╯Means
╰────────────────────────────────╯Scored(DefinedTerm { term_name: "Effective Date", definition_type: QuotedMeans }, conf: 0.95)
